--- a/p/pu/pur/puresolo.com.html
+++ b/p/pu/pur/puresolo.com.html
@@ -1,43 +1,49 @@
-<!--The following is the downloaded HTML source of the puresolo.com privacy policy that was archived on 2010-06-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100612041702id_/http%3A//www.puresolo.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the puresolo.com privacy policy that was archived on 2010-09-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100925075054id_/http%3A//www.puresolo.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xml:lang="en" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-<meta content="IE=EmulateIE7" http-equiv="X-UA-Compatible">
 <title>Download Sheet Music, Download Backing Tracks &amp; Download Karaoke Songs | PureSolo</title>
 <meta content="Visit PureSolo to download sheet music, download backing tracks and download karaoke songs. Our free karaoke player allows you to record your performance, and our range of accompaniment tracks gives instrumentalists the perfect practising tool." name="description">
 <meta content="12O4XoH8E9TM2MVKjbHSGx7YOulr2x_uS5HhwVIPhvc" name="google-site-verification">
 <meta content="f2bdbc31f935fa54" name="y_key">
 
+<meta content="62489711158" property="fb:app_id">
+
 <meta content="noindex" name="robots">
 <link href="/favicon.ico" rel="icon" type="image/x-icon">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
 
-<script src="/javascripts/libs_packaged.js?1276079161" type="text/javascript"></script>
-<script src="/javascripts/base_packaged.js?1276079161" type="text/javascript"></script>
+<script src="/javascripts/libs_packaged.js?1285069672" type="text/javascript"></script>
+<script src="/javascripts/base_packaged.js?1285069670" type="text/javascript"></script>
 
 
 
-<link href="/stylesheets/base_packaged.css?1276079161" media="screen" rel="stylesheet" type="text/css">
+<link href="/stylesheets/base_packaged.css?1285069671" media="screen" rel="stylesheet" type="text/css">
 
 <!--[if IE 6]>
-<script src="/javascripts/ie6_png_fix_rules.js?1276079134" type="text/javascript"></script>
+<script src="/javascripts/ie6_png_fix_rules.js?1285069608" type="text/javascript"></script>
 <![endif]-->
 <script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-5133909-2']);
-_gaq.push(['_trackPageview']);
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
+  //<![CDATA[
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-5133909-2']);
+    _gaq.push(['_trackPageview']);
+    
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' === document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  //]]>
 </script>
 
-<script src="/javascripts/ga_track.js?1276079134" type="text/javascript"></script>
+
+<script src="/javascripts/ga_track.js?1285069608" type="text/javascript"></script>
 </head>
 
 <body>
+<div id="facebook_application_id">62489711158</div>
 <div id="fb-root"></div>
 <script src="http://connect.facebook.net/en_US/all.js" type="text/javascript"></script>
 <div class="dynamic_page_width" id="header">
@@ -51,7 +57,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </div>
 <div class="column_two transparent">
 <div class="sign_in_with_facebook_wrapper">
-<div class="sign_in_with_facebook"><a href="#" class="facebook_sign_in"><img alt="Sign_in_with_facebook" src="/images/users/sign_in_with_facebook.png?1276079134"></a></div>
+<div class="sign_in_with_facebook"><a href="#" class="facebook_sign_in"><img alt="Sign_in_with_facebook" src="/images/users/sign_in_with_facebook.png?1285069608"></a></div>
 </div>
 <form action="https://www.puresolo.com/session" class="new_user_session" id="new_user_session" method="post">
 <div id="login_and_logout">
@@ -59,7 +65,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <ol>
 <li><input class="field blur" id="user_session_email" name="user_session[email]" size="30" title="Email" type="text"></li>
 <li><input class="field" id="user_session_password" name="user_session[password]" size="30" title="Password" type="password"></li>
-<li><input class="button ga_login" id="login" src="/images/shared/buttons/login.png?1276079134" type="image"></li>
+<li><input class="button ga_login" id="login" src="/images/shared/buttons/login.png?1285069608" type="image"></li>
 </ol>
 </fieldset>
 <ul id="register_and_forgot_password">
@@ -80,13 +86,13 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 </form>
 
 <ul id="main_menu">
-<li><a href="/">Home</a></li>
-<li class="music"><a href="/stores/accompaniment-tracks/tracks">Music Stores</a></li>
-<li class="record"><a href="/songs/demo">Record</a></li>
-<li><a href="/competitions">Competitions</a></li>
-<li><a href="/forums">Forum</a></li>
-<li><a href="/blogs">Blog</a></li>
-<li class="help"><a href="/faq" class="current">Help</a></li>
+<li class="home"><a href="/"><span>Home</span></a></li>
+<li class="music"><a href="/stores/accompaniment-tracks/tracks"><span>Music Stores</span></a></li>
+<li class="record"><a href="/songs/demo"><span>Record</span></a></li>
+<li><a href="/competitions"><span>Competitions</span></a></li>
+<li class="forum"><a href="/forums"><span>Forum</span></a></li>
+<li class="community"><a href="/community"><span>Community</span></a></li>
+<li class="help last"><a href="/faq" class="current"><span>Help</span></a></li>
 </ul>
 
 </div>
@@ -116,7 +122,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 <div class="positioning">
 <div class="content">
 <div id="quick_record">
-<a href="/songs/demo"><img alt="Quick_record" src="/images/shared/buttons/quick_record.png?1276079134"></a>
+<a href="/songs/demo"><img alt="Quick_record" src="/images/shared/buttons/quick_record.png?1285069608"></a>
 </div>
 
 
@@ -346,12 +352,12 @@ Questions, comments and requests regarding this Privacy Policy are welcomed and 
 <h3>Share This</h3>
 <div class="content">
 <ul id="actions">
-<li id="share_on_facebook"><a href="#" rel="nofollow"><img alt="Facebook" src="/images/homes/icons/facebook.png?1276079134"> Facebook</a></li>
-<li id="share_on_twitter"><a href="#" rel="nofollow"><img alt="Twitter" src="/images/homes/icons/twitter.png?1276079134"> Twitter</a></li>
-<li id="share_on_delicious"><a href="#" rel="nofollow"><img alt="Delicious" src="/images/homes/icons/delicious.png?1276079134"> del.icio.us</a></li>
-<li id="share_on_stumble_upon"><a href="#" rel="nofollow"><img alt="Stumble_upon" src="/images/homes/icons/stumble_upon.png?1276079134"> Stumble Upon</a></li>
-<li id="share_on_digg"><a href="#" rel="nofollow"><img alt="Digg" src="/images/homes/icons/digg.png?1276079134"> Digg</a></li>
-<li id="share_on_reddit"><a href="#" rel="nofollow"><img alt="Reddit" src="/images/homes/icons/reddit.png?1276079134"> Reddit</a></li>
+<li id="share_on_facebook"><a href="#" rel="nofollow"><img alt="Facebook" src="/images/homes/icons/facebook.png?1285069608"> Facebook</a></li>
+<li id="share_on_twitter"><a href="#" rel="nofollow"><img alt="Twitter" src="/images/homes/icons/twitter.png?1285069608"> Twitter</a></li>
+<li id="share_on_delicious"><a href="#" rel="nofollow"><img alt="Delicious" src="/images/homes/icons/delicious.png?1285069608"> del.icio.us</a></li>
+<li id="share_on_stumble_upon"><a href="#" rel="nofollow"><img alt="Stumble_upon" src="/images/homes/icons/stumble_upon.png?1285069608"> Stumble Upon</a></li>
+<li id="share_on_digg"><a href="#" rel="nofollow"><img alt="Digg" src="/images/homes/icons/digg.png?1285069608"> Digg</a></li>
+<li id="share_on_reddit"><a href="#" rel="nofollow"><img alt="Reddit" src="/images/homes/icons/reddit.png?1285069608"> Reddit</a></li>
 </ul>
 </div>
 </div>
@@ -401,7 +407,6 @@ Questions, comments and requests regarding this Privacy Policy are welcomed and 
 <div class="positioning">
 <div class="content">
 <div id="footer_links">
-<div class="left">
 <ul>
 <li><a href="/about-us" rel="nofollow">About Us</a></li>
 <li><a href="/affiliates" rel="nofollow">Affiliates</a></li>
@@ -418,7 +423,6 @@ Questions, comments and requests regarding this Privacy Policy are welcomed and 
 Copyright © 2008-2010 PureSolo Limited. All rights reserved.
 </p>
 
-</div>
 </div>
 
 </div>
