--- a/p/pa/pan/panelplace.com.html
+++ b/p/pa/pan/panelplace.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the panelplace.com privacy policy that was archived on 2010-05-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100531025648id_/http%3A//www.panelplace.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the panelplace.com privacy policy that was archived on 2010-09-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100926091948id_/http%3A//panelplace.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
