--- a/p/pl/pla/platinumservermanagement.com.html
+++ b/p/pl/pla/platinumservermanagement.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the platinumservermanagement.com privacy policy that was archived on 2010-01-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100106111731id_/http%3A//www.platinumservermanagement.com/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the platinumservermanagement.com privacy policy that was archived on 2010-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100927005259id_/http%3A//platinumservermanagement.com/Privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -214,7 +214,7 @@ Please be assured that any personal information that you provide in communicatio
 	
 	<div id="footer">
 	
-All rights reserved. © 2009 Platinum Server Management, Inc.<br>
+All rights reserved. © 2010 Platinum Server Management, Inc.<br>
 All trademarks are property of their respective holders.
 <br><br>
 <a href="TOS.html">Terms of Service</a>  |  <a href="Privacy.html">Privacy Policy</a>
