--- a/i/in/int/interplas.com.html
+++ b/i/in/int/interplas.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the interplas.com privacy policy that was archived on 2010-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100616010627id_/http%3A//www.interplas.com/info/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the interplas.com privacy policy that was archived on 2010-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100927033823id_/http%3A//www.interplas.com/info/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>International Plastics Privacy Policy</title>
@@ -14,6 +14,7 @@
 <link rel="stylesheet" type="text/css" href="/css/menus.css">
 <link rel="stylesheet" type="text/css" href="/css/contentslider.css">
 <script type="text/javascript" src="/jscripts/interplas20100419.js"></script>
+<script type="text/javascript" src="/jscripts/swfobject.js"></script>
 <script type="text/javascript" src="/jscripts/contentslider.js"></script>
 <script type="text/javascript">
 <!--
@@ -45,7 +46,6 @@ if(isEmpty(document.quoteform.contactus_contact_name.value) ||
 }
 // -->
 </script>
-<link rel="stylesheet" href="/css/lightbox/lightbox.css" type="text/css" media="screen">
 <script type="text/javascript" src="/jscripts/ibox.js"></script>
 </head>
 <body style="background-color: #C3CAD4; background-image: url('/images/gradient.jpg'); background-repeat: repeat-x; margin-top: 0px; margin-right: 0px; margin-bottom: 50px; margin-left: 0px;">
@@ -105,7 +105,7 @@ elid_cartdesc.innerHTML='0 items in cart.'
 <div id="Product_Menu">
 	<a id="custom" href="http://www.interplas.com/custom-manufacturing-capabilities" onmouseover="ajaxDiv('custom_menu'); dropdownmenu(this, event, 'custom_menu'); return true;"></a><a id="polybags" href="http://www.interplas.com/poly-bags" onmouseover="ajaxDiv('polybags_menu'); dropdownmenu(this, event, 'polybags_menu'); return true;"></a><a id="reclosable" href="http://www.interplas.com/ziplock-bags" onmouseover="ajaxDiv('reclosable_menu'); dropdownmenu(this, event, 'reclosable_menu'); return true;"></a><a id="retail" href="http://www.interplas.com/retail-bags" onmouseover="ajaxDiv('retail_menu'); dropdownmenu(this, event, 'retail_menu'); return true;"></a><a id="polyfilm" href="http://www.interplas.com/polytubing-film" onmouseover="ajaxDiv('polyfilm_menu'); dropdownmenu(this, event, 'polyfilm_menu'); return true;"></a><a id="supplies" href="http://www.interplas.com/packaging-shipping-supplies" onmouseover="ajaxDiv('supplies_menu'); dropdownmenu(this, event, 'supplies_menu'); return true;"></a>
 </div>
-<div class="breadcrumbs" style="clear: both;"></div>
+<div class="breadcrumbs"></div>
 <!-- End Product Menu Bar -->
 <!-- ISEARCH_BEGIN_INDEX -->
 <table width="100%" cellspacing="0">
@@ -158,13 +158,18 @@ elid_cartdesc.innerHTML='0 items in cart.'
 </tbody></table>
 
 <!-- Start Bottom Menu -->
-<table border="0" cellpadding="0" cellspacing="0" width="990">
- <tbody><tr>
-  <td style="background: url('/images/left_blue.jpg'); background-repeat: repeat-y;"><img width="10" src="/images/left_blue.jpg" alt=""></td>
-  <td width="970" style="background-color:#BCD2E7;" align="center">
-<table width="90%" border="0" cellspacing="3" cellpadding="0" class="blu10">
- <tbody><tr>
-  <td width="25%" valign="top" class="blu10 hpc" align="left">
+<div style="position: relative; margin: 0px; width: 990px; min-height: 130px; background-color:#BCD2E7; text-align: left; background: url('/images/footer_blue.jpg'); background-repeat: repeat-y; padding: 8px 0px;">
+
+<div style="position: absolute; margin: 0px 0px 0px 720px;">
+<div style="width: 236px; border: 1px solid #eee;">
+<div style="width: 236px; height: 59px; background: url('/images/credentials.jpg') no-repeat scroll 0% 0%;"><div style="margin-left: 128px; height: 40px; width: 100px; cursor: pointer;" onclick="self.location.href = 'http://www.bbb.org/nw-south-carolina/business-reviews/packaging-materials/international-plastics-inc-in-greenville-sc-13001232/'"></div></div>
+<div style="width: 236px; height: 59px; background: url('/images/credentials.jpg') no-repeat scroll 100% 0%;"></div>
+</div>
+
+</div>
+
+
+  <div style="float: left; padding-left: 20px;" class="blu10 hpc">
 <span class="blu9b blu12">Product Categories</span><br>
 <a href="http://www.interplas.com/custom-manufacturing-capabilities">Custom Capabilities</a><br>
 <a href="http://www.interplas.com/poly-bags">Poly Bags &amp; Poly Liners</a><br>
@@ -173,25 +178,24 @@ elid_cartdesc.innerHTML='0 items in cart.'
 <a href="http://www.interplas.com/polytubing-film">Poly Tubing &amp; Film</a><br>
 <a href="http://www.interplas.com/packaging-shipping-supplies">Packaging Supplies</a><br>
 <a href="http://www.interplas.com/packaging-shipping-supplies">Shipping Supplies</a><br>
-<a href="http://www.interplas.com/ziplock-bags">Ziplock Bags</a><br>
-  </td>
-  <td width="25%" valign="top" class="blu10 hpc" align="left">
+<a href="http://www.interplas.com/ziplock-bags">Ziplock Bags</a>
+  </div>
+  <div style="float: left; padding-left: 20px;" class="blu10 hpc">
 <span class="blu9b blu12">Customer Service</span><br>
 <a href="https://www.interplas.com/account.html">My Account</a><br>
 <a href="https://www.interplas.com/account.html">Track Order</a><br>
 <a href="https://www.interplas.com/account.html">Re-Order</a><br>
-<a href="/international-plastics-contact.html">Contact Us</a><br>
-  </td>
-  <td width="25%" valign="top" class="blu10 hpc" align="left">
+<a href="/international-plastics-contact.html">Contact Us</a>
+  </div>
+  <div style="float: left; padding-left: 20px;" class="blu10 hpc">
 <span class="blu9b blu12">Company Info</span><br>
 <a href="http://www.interplas.com/info">About Us</a><br>
 <a href="http://www.interplas.com/custom-plant-profiles">Plant Profiles</a><br>
 <a href="http://www.interplas.com/info/awards">Awards &amp; Testimonials</a><br>
 <a href="javascript:void%20window.open('http://www.interplas.com/PDF/2010EUCatalog.pdf','Latest_Catalog','height=400,width=600,toolbar=no,menubar=no,scrollbars=yes,resizable=yes,location=no,directories=no,status=no')">Product Catalog</a><br>
-<a href="http://blog.interplas.com">Packaging Bags &amp; Supplies Blog</a><br>
-  </td>
-  <td width="25%" valign="top" class="blu10 hpc" align="left">
-<div style="position: absolute; width: 80px; margin-left: 170px;"><div class="addthis_toolbox addthis_default_style"><a href="http://addthis.com/bookmark.php?v=250&amp;username=xa-4bf4511569ed0ea2" class="addthis_button_compact">Share</a><span class="addthis_separator">|</span><a class="addthis_button_facebook"></a><a class="addthis_button_myspace"></a><a class="addthis_button_google"></a><a class="addthis_button_twitter"></a></div><script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#username=xa-4bf4511569ed0ea2"></script></div>
+<a href="http://blog.interplas.com">Packaging Bags &amp; Supplies Blog</a>
+  </div>
+  <div style="float: left; padding-left: 20px;" class="blu10 hpc">
 <span class="blu9b blu12">Site Info</span><br>
 <a href="http://www.interplas.com/help">Help</a><br>
 <a href="http://www.interplas.com/info/privacy-policy">Privacy Policy</a><br>
@@ -199,21 +203,12 @@ elid_cartdesc.innerHTML='0 items in cart.'
 <a class="hph" href="http://www.interplas.com/international-plastics-sitemap.html">Site Map</a><br>
 <a href="http://www.interplas.com/">Plastic Bags</a><br>
 <a href="http://www.interplas.com/mail_chimp_newsletter.html" rel="ibox&amp;height=250">Subscribe to Newsletter</a>
-  </td>
- </tr>
-</tbody></table>
-  </td>
-  <td style="background: url('/images/right_blue.jpg'); background-repeat: repeat-y;"><img width="10" src="/images/right_blue.jpg" alt=""></td>
- </tr>
-</tbody></table>
+  </div>
+</div>
 <!-- End Bottom Menu -->
 <!-- Close Page -->
-<div id="bottombar" class="wht10">Copyright © 1999-2009 · International Plastics, Inc · 185 Commerce Center, Greenville, SC  29615-5817 · P: 800.820.4722 · L: 864-297-8000 · F: 800.297.7186</div>
+<div id="bottombar" class="wht10">Copyright © 1999-2010 · International Plastics, Inc · 185 Commerce Center, Greenville, SC  29615-5817 · P: 800.820.4722 · L: 864-297-8000 · F: 800.297.7186</div>
 <!-- Close Page -->
-<table border="0" cellpadding="0" cellspacing="0" width="990">
-<tbody><tr>
-<td style="width: 272px; height: 59px; background: url('/images/credentials.jpg') no-repeat scroll 0% 0%;"><div style="margin-left: 128px; height: 40px; width: 100px; cursor: pointer;" onclick="self.location.href = 'http://www.bbb.org/nw-south-carolina/business-reviews/packaging-materials/international-plastics-inc-in-greenville-sc-13001232/'"></div></td>
-<td style="width: 455px;">
 <script type="text/javascript">
 <!--
 var httproto = (("https:" == document.location.protocol) ? "https" : "http");
@@ -237,10 +232,6 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-466685-1");
 pageTracker._trackPageview();
 </script>
-</td>
-<td style="width: 218px; height: 59px; background: url('/images/credentials.jpg') no-repeat scroll 100% 0%;"></td>
-</tr>
-</tbody></table>
 
 <!-- End Main Table -->
 </td>
