--- a/s/su/sup/supersimplemarketing.com.html
+++ b/s/su/sup/supersimplemarketing.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the supersimplemarketing.com privacy policy that was archived on 2010-03-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100315111710id_/http%3A//supersimplemarketing.com/14) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the supersimplemarketing.com privacy policy that was archived on 2010-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100927050700id_/http%3A//supersimplemarketing.com/14) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -157,25 +157,8 @@ Privacy Policy</a></span>
 
 </div>
 
-<!-- 16 queries. 0.239 seconds. -->
-<div>	<!-- Google Analytics for WordPress | http://yoast.com/wordpress/google-analytics/ -->
-	<script type="text/javascript">
-		var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-		document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		try {
-			var pageTracker = _gat._getTracker("UA-705035-12");
-		} catch(err) {}
-	</script>
-	<script type="text/javascript">
-		try {
-			// Cookied already: 
-			pageTracker._trackPageview();
-		} catch(err) {}
-	</script>
-	<!-- End of Google Analytics code -->
-	</div>
+<!-- 16 queries. 0.179 seconds. -->
+<div></div>
 
 
 </body></html>
