--- a/d/dj/dji/djintelligence.com.html
+++ b/d/dj/dji/djintelligence.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the djintelligence.com privacy policy that was archived on 2010-05-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100516075132id_/http%3A//www.djintelligence.com/pages/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the djintelligence.com privacy policy that was archived on 2010-09-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20100927145439id_/http%3A//www.djintelligence.com/pages/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>DJ Intelligence® - Privacy Statement</title>
@@ -8,10 +8,10 @@
 
 <style>a:hover      { text-decoration: none }
 </style>
+<meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
 <link rel="icon" href="/bulb.ico" type="image/x-icon">
 <link rel="shortcut icon" href="/bulb.ico" type="image/x-icon">
-<link rel="alternate" type="application/rss+xml" title="RSS" href="http://www.djintelligence.com/pages/news/feed.asp?feed=rss">
-<link rel="alternate" type="application/atom+xml" title="Atom" href="http://www.djintelligence.com/pages/news/feed.asp?feed=atom">
+<link rel="alternate" type="application/rss+xml" title="DJ Intelligence" href="http://www.djintelligence.com/news/feed.asp">
 </head>
 
 <body bgcolor="#CCC9C2" text="#000000" link="#000066" vlink="#000066" alink="#000066">
@@ -30,8 +30,8 @@
 					<td width="120"><font size="1" face="Verdana">&nbsp;</font></td>
 					<td width="300" align="left" valign="top"><font size="1" face="Verdana">
 					<a href="http://www.djintelligence.com" target="_parent"><img border="0" src="http://www.djintelligence.com/images/logoslogan.gif" alt="DJ Intelligence® - Privacy Statement"></a></font></td>
-					<td width="330" valign="top" align="left">
-					<font face="Verdana" size="1"><img border="0" src="http://www.djintelligence.com/images/computergraphic.gif" alt="DJ Software - DJ Website Tools"></font></td>
+					<td width="330" valign="top" align="right">
+					<font face="Verdana" size="1"><a href="http://www.facebook.com/djintelligence" target="_blank"><img src="http://www.djintelligence.com/images/facebook.gif" alt="Facebook" border="0" hspace="1" align="top"></a><a href="http://twitter.com/djintelligence" target="_blank"><img src="http://www.djintelligence.com/images/twitter.gif" alt="Twitter" border="0" hspace="1" align="top"></a><a href="http://www.djintelligence.com/news/feed.asp"><img src="http://www.djintelligence.com/images/rss.gif" alt="RSS" border="0" hspace="1" align="top"></a><img border="0" src="http://www.djintelligence.com/images/computergraphic.gif" alt="DJ Software - DJ Website Tools">&nbsp;&nbsp;</font></td>
 				</tr>
 			</tbody></table>
 			</td>
@@ -50,7 +50,7 @@
 				</tr>
 				<tr>
 					<td align="center" colspan="2">
-					<font size="1" face="Verdana"><b>Sunday, May 16, 2010&nbsp;
+					<font size="1" face="Verdana"><b>Monday, September 27, 2010&nbsp;
 					</b><br>
 &nbsp;</font></td>
 				</tr>
@@ -124,7 +124,7 @@
 					<td align="right">
 					<font size="1" face="Verdana">
 					<img vspace="5" hspace="2" border="0" src="http://www.djintelligence.com/images/blackdart.gif"></font></td>
-					<td><b><font size="1" color="#808080" face="Verdana">&nbsp;&nbsp;<a href="http://www.djintelligence.com/pages/news/news.asp" target="_parent">News Blog</a></font></b></td>
+					<td><b><font size="1" color="#808080" face="Verdana">&nbsp;&nbsp;<a href="http://www.djintelligence.com/news" target="_parent">News Blog</a></font></b></td>
 				</tr>
 				<tr>
 					<td align="right">
@@ -152,13 +152,13 @@
 						<table border="0" cellpadding="0" cellspacing="0" width="90%">
 							<tbody><tr>
 								<td align="center">
-								<font size="1" face="Verdana">"It's like a secretary that works 24/7. Outstanding customer support. The best money I have ever spent on my business."</font></td>
+								<font size="1" face="Verdana">"I have now secured regular bookings with one of the UK major hotel chains. The best investment I have made in years!"</font></td>
 								<td><font size="1" face="Verdana">&nbsp;</font></td>
 							</tr>
 						</tbody></table>
 					</div>
 					<font color="#000066" face="Verdana" size="1">&nbsp;<br>
-					<a href="http://www.djintelligence.com/pages/success.asp">Grapevine Productions</a>&nbsp;&nbsp;</font></td>
+					<a href="http://www.djintelligence.com/pages/success.asp">Starsound UK</a>&nbsp;&nbsp;</font></td>
 				</tr>
 				<tr>
 					<td><font size="1" face="Verdana">
@@ -488,7 +488,6 @@
 	<tbody><tr>
 		<td width="110">&nbsp;</td>
 		<td width="640">
-		<p align="center"><a href="http://www.facebook.com/djintelligence" target="_blank"><img src="http://www.djintelligence.com/images/facebookfind.gif" alt="Find us on Facebook" border="0" hspace="10"></a><a href="http://www.twitter.com/djintelligence" target="_blank"><img src="http://www.djintelligence.com/images/twitterfollow.gif" alt="Follow us on Twitter" border="0" hspace="10"></a></p>
 		<p align="center"><font face="Verdana" size="1">
 		<a href="http://www.djintelligence.com/pages/legal.asp" target="_parent"><font color="#000000">Legal Notice</font></a> |
 		<a href="http://www.djintelligence.com/pages/terms.asp" target="_parent"><font color="#000000">Terms of Service</font></a> |
@@ -497,7 +496,7 @@
 		<a href="http://www.djintelligence.com/pages/resources.asp" target="_parent"><font color="#000000">Industry Resources</font></a> |
 		<a href="http://www.djintelligence.com/pages/partners.asp" target="_parent"><font color="#000000">Partners</font></a>
 		</font></p>
-		<p align="center"><font face="Verdana" color="#000000" size="1">Copyright © 1998-2010 <a target="_blank" href="http://www.intelligenceinc.com"><font color="#000000">Intelligence, Inc.</font></a> Patent Pending. All Rights Reserved.</font></p>
+		<p align="center"><font face="Verdana" color="#000000" size="1">Copyright © 1998-2010 <a target="_blank" href="http://www.intelligenceinc.com"><font color="#000000">Intelligence, Inc.</font></a> All Rights Reserved.</font></p>
 		</td>
 	</tr>
 </tbody></table>
